Correctif contraste

--- a/style.css
+++ b/style.css
@@ -72,18 +72,36 @@ a:hover {
 }
 #bloc-6 {
     text-align: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+#bloc-6 h1 {
+    font-size: 50px;
+}
+#bloc-6 p {
+    font-size: 20px;
+    text-align: center;
 }
 #bloc-6 > .container {
     max-width: none;
 }
-#bloc-7 {
-    text-align: center;
-}
 #bloc-7 .bloc-lg {
     padding-top: 20px;
 }
+#bloc-7 .col-sm-6--infos {
+    text-align: center;
+}
+#bloc-7 .row{ 
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
 #bloc-8 {
     text-align: center;
+    color: rgb(46,40,23);
+}
+#bloc-8 .white {
     color: rgb(46,40,23);
 }
     
@@ -114,10 +132,6 @@ a:hover {
     background-attachment: fixed;
 }
 
-.d-bloc {
-    color: rgba(255, 255, 255, .7);
-}
-
 .d-bloc button:hover {
     color: rgba(255, 255, 255, .9);
 }
@@ -138,7 +152,6 @@ a:hover {
 .d-bloc .navbar a,
 .d-bloc .navbar-brand,
 .d-bloc a .icon-sm,
-.d-bloc a .icon-md,
 .d-bloc a .icon-lg,
 .d-bloc a .icon-xl,
 .d-bloc h1 a,
@@ -149,6 +162,9 @@ a:hover {
 .d-bloc h6 a,
 .d-bloc p a {
     color: rgba(255, 255, 255, .6);
+}
+.d-bloc a .icon-md {
+    color: rgb(46,40,23);
 }
 
 .d-bloc .a-btn:hover,
@@ -206,11 +222,6 @@ a:hover {
 .d-bloc .panel .btn-wire:hover {
     color: rgba(0, 0, 0, .7);
     border-color: rgba(0, 0, 0, .3);
-}
-
-.d-bloc .panel,
-.l-bloc {
-    color: rgba(0, 0, 0, .5);
 }
 
 .d-bloc .panel button:hover,
@@ -343,6 +354,15 @@ em {
     margin-right: -16px;
     float: right;
     z-index: 1;
+}
+
+.navbar-nav:hover {
+    background: rgba(46,40,23,0.4);
+    border-radius: 5px;
+}
+
+.navbar-nav:hover > li {
+    color: #FFFFFF;
 }
 
 .nav > li {
@@ -685,7 +705,6 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
 }
 .container {
     margin-right: auto;
@@ -735,6 +754,9 @@ p {
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10px;
 }
 
 h2 {
